done header component

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,8 +1,8 @@
 $main-bg-color: #f0efef;
 $sec-bg-color: #fefefe;
 $third-bg-color: #96a6a5;
-
+$detail-color: #22ad96;
 $titles-color: #513e5e;
 
 $titles-fs: 1.3rem;
-$text-fs: .85rem;
+$text-fs: .75rem;
