fix jumbo component

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 $main-bg-color: #f0efef;
 $sec-bg-color: #fefefe;
-$third-bg-color: #96a6a5;
+$third-bg-color: #e9e6e3;
 $detail-color: #22ad96;
 $titles-color: #513e5e;
 
