add BuildDream Comp data

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,6 +3,7 @@ $sec-bg-color: #fefefe;
 $third-bg-color: #e9e6e3;
 $detail-color: #22ad96;
 $titles-color: #513e5e;
+$subtitles-color: #959999;
 
 $titles-fs: 2rem;
 $text-fs: .75rem;
