--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,7 @@ $third-bg-color: #e9e6e3;
 $detail-color: #22ad96;
 $titles-color: #513e5e;
 $subtitles-color: #959999;
+$data-bg-color: #faf8f6;
 
 $titles-fs: 2rem;
 $text-fs: .7rem;
