fix bg color into LatestCoursesComp

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,6 +2,7 @@ $main-bg-color: #f0efef;
 $sec-bg-color: #fefefe;
 $third-bg-color: #e9e6e3;
 $data-bg-color: #faf8f6;
+$courses-bg-color: #fdfdfd;
 $detail-color: #22ad96;
 $titles-color: #513e5e;
 $subtitles-color: #959999;
