add hover on green buttons

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -6,6 +6,7 @@ $courses-bg-color: #fdfdfd;
 $detail-color: #22ad96;
 $titles-color: #513e5e;
 $subtitles-color: #959999;
+$hover-button: #3f3a64;
 
 $titles-fs: 2.2rem;
 $text-fs: .8rem;
