--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,7 +3,7 @@ $sec-bg-color: #fefefe;
 $third-bg-color: #e9e6e3;
 $data-bg-color: #faf8f6;
 $courses-bg-color: #fdfdfd;
-$detail-color: #22ad96;
+$detail-color: #0088cc;
 $titles-color: #513e5e;
 $subtitles-color: #959999;
 $hover-button: #3f3a64;
