add hover on LatestCoursesCard component

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,7 +2,7 @@ $main-bg-color: #f0efef;
 $sec-bg-color: #fefefe;
 $third-bg-color: #e9e6e3;
 $data-bg-color: #faf8f6;
-$courses-bg-color: #fdfdfd;
+$courses-bg-color: #f8f8f8;
 $detail-color: #0088cc;
 $titles-color: #513e5e;
 $subtitles-color: #959999;
