add hover on EventCard component

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -7,6 +7,7 @@ $detail-color: #0088cc;
 $titles-color: #513e5e;
 $subtitles-color: #959999;
 $hover-button: #3f3a64;
+$box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 $titles-fs: 2.2rem;
 $text-fs: .8rem;
